--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Glob API URL
-VITE_GLOB_API_URL=/api
-
+#VITE_GLOB_API_URL=/api
+# axios全局url
+VITE_GLOB_API_URL=http://127.0.0.1/v1/chat/completions
+# 代理url
 VITE_APP_API_BASE_URL=http://127.0.0.1:3002/
 
 # Whether long replies are supported, which may result in higher API fees
